# CMakSeries

./: README.md
ep002/source/: CMakeLists.txt  main.cpp
ep005/source/: CMakeLists.txt  main.cpp
ep005/source/src/: operations.cpp
ep007/source/: CMakeLists.txt  main.cpp
ep007/source/include/: dog.h
ep007/source/logger/include/: log.h
ep007/source/logger/src/: log.cpp
ep007/source/src/: dog.cpp
ep008/: CMakeLists.txt
ep008/src/: main.cpp
ep008/src/stats/: stats.cpp
ep009/: CMakeLists.txt
ep009/src/math/: math.cmake  supermath.cpp
ep009/src/stats/include/: stats.h
ep010/: CMakeLists.txt
ep010/src/math/: CMakeLists.txt
ep010/src/stats/: CMakeLists.txt
ep011/: 1-message.cmake  2-variables.cmake  3-list_option.cmake  4-flow_control.cmake  5-loops.cmake  6-functions.cmake
